--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <!--[if IE 9]> <html class="ie9 lteie9"> <![endif]-->
 <!--[if !(IE)]><!--><html lang="en" class="no-js"><!--<![endif]-->
 <head>
-	<title>Chris Ozols - Minneapolis Minnesota</title>
+	<title>Chris Ozols - Minneapolis Minnesota software engineer</title>
 	<meta charset="utf-8">
-	<meta name="description" content="Chris Ozols, a web developer in the Minneapolis/St. Paul area">
+	<meta name="description" content="Chris Ozols, a software engineer in the Minneapolis/St. Paul area">
 	<meta name="author" content="Chris Ozols">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="author" href="humans.txt">
@@ -23,7 +23,7 @@
 	</header>
 	<div id="main">
 		<section id="whatido-container">
-			<img src="images/chrispic_small.png" alt="Chris Ozols" title="Chris Ozols" />
+			<img src="images/cozpicsmall2.png" alt="Chris Ozols" title="Chris Ozols" />
 			<h1>I'm Chris, a web applications developer in Minneapolis Minnesota.</h1>
 			<p>I'm currently employed full time, and not 
 available for any freelance or contract positions. Feel free to contact 
