--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<h1>I'm Chris, a web applications developer in Minneapolis Minnesota.</h1>
 			<p>I'm currently employed full time, and not 
 available for any freelance or contract positions. Feel free to contact 
-me below. Check out my current side project, <a href="https://secrethitler.io">Secret Hitler IO</a>, a web adaptation of the (creative commons non-commercial licensed) social deduction indie board game. <small>I made the game mostly because of the permissive license and art. I am not a Nazi and site rules specifically prohibit that stuff. Please don't put me on a list.</small></p>
+me below. Check out my current side project, <a href="https://secrethitler.io">Secret Hitler IO</a>, a web adaptation of the (creative commons non-commercial licensed) social deduction indie board game. <small>I made the site mostly because of the game's permissive license, I am not a terrible person, I promise.</small></p>
 		</section>
 	</div>
 		<nav>
