--- a/index.html
+++ b/index.html
@@ -1,56 +1,102 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--[if lt IE 8]> <html class="ltie9 ltie8"> <![endif]-->
 <!--[if IE 8]> <html class="ltie9 lteie9"> <![endif]-->
 <!--[if IE 9]> <html class="ie9 lteie9"> <![endif]-->
 <!--[if !(IE)]><!--><html lang="en" class="no-js"><!--<![endif]-->
-<head>
-	<title>Chris Ozols - Minneapolis Minnesota software engineer</title>
-	<meta charset="utf-8">
-	<meta name="description" content="Chris Ozols, a software engineer in the Minneapolis/St. Paul area">
-	<meta name="author" content="Chris Ozols">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="author" href="humans.txt">
-	<link href="//fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" href="images/favicon.png">
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-	<link rel="stylesheet" type="text/css" href="styles/global.css">
-	<script type="text/javascript" src="scripts/modernizr.custom.97547.js"></script>
-</head>
-<body>
-	<canvas id="header-canvas" width="100" height="7"></canvas>
-	<header>
-		<p>chris ozols</p>
-	</header>
-	<div id="main">
-		<section id="whatido-container">
-			<img src="images/cozpicsmall2.png" alt="Chris Ozols" title="Chris Ozols" />
-			<h1>I'm Chris, a web applications developer in Minneapolis Minnesota.</h1>
-			<p>I'm currently employed full time, and not 
-available for any freelance or contract positions. Feel free to contact 
-me below. Check out my current side project, <a href="https://secrethitler.io">Secret Hitler IO</a>, a web adaptation of the (creative commons non-commercial licensed) social deduction indie board game. <small>I made the site mostly because of the game's permissive license, I am not a terrible person, I promise.</small></p>
-		</section>
-	</div>
-		<nav>
-			<footer>
-				<a tabindex="1" href="email:chris.v.ozols@gmail.com" id="email-button" class="footer-icons">
-					<div class="popup nav-popup" id="email-button-popup">
-						<p>chris.v.ozols@gmail.com</p>
-					</div>
-				</a>
-				<a tabindex="3" href="http://www.linkedin.com/pub/chris-ozols/59/775/8a2" class="footer-icons" id="linkedin-button">
-					<div class="popup nav-popup" id="linkedin-button-popup">
-					Linked In
-					</div>
-				</a>
-				<a tabindex="4" href="https://github.com/cozuya" class="footer-icons" id="github-button">
-					<div class="popup nav-popup" id="github-button-popup">
-					Github
-					</div>
-				</a>
-			</footer>
-		</nav>
-	<script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="scripts/textEffect.jquery.js"></script>  <!-- jQuery plugin I wrote -->
-	<script type="text/javascript" src="scripts/general.js"></script>
-</body>
+  <head>
+    <title>Chris Ozols - Minneapolis Minnesota software engineer</title>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Chris Ozols, a software engineer in the Minneapolis/St. Paul area"
+    />
+    <meta name="author" content="Chris Ozols" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <link rel="author" href="humans.txt" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="shortcut icon" href="images/favicon.png" />
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
+    <link rel="stylesheet" type="text/css" href="styles/global.css" />
+    <script
+      type="text/javascript"
+      src="scripts/modernizr.custom.97547.js"
+    ></script>
+  </head>
+  <body>
+    <canvas id="header-canvas" width="100" height="7"></canvas>
+    <header>
+      <p>chris ozols</p>
+    </header>
+    <div id="main">
+      <section id="whatido-container">
+        <img
+          src="images/cozpicsmall2.png"
+          alt="Chris Ozols"
+          title="Chris Ozols"
+        />
+        <h1>
+          I'm Chris, a web applications developer in Minneapolis Minnesota.
+        </h1>
+        <p>
+          <bold class="emph">I'm looking for a new role!</bold> I'm an
+          experienced frontend focused, full stack JavaScript developer. Feel
+          free to contact me below.
+        </p>
+        <p>
+          Check out my side project,
+          <a href="https://secrethitler.io">Secret Hitler IO</a>, a web
+          adaptation of the (creative commons non-commercial licensed) social
+          deduction indie board game.
+          <small
+            >I made the site mostly because of the game's permissive license, I
+            am not a terrible person, I promise.</small
+          >
+        </p>
+      </section>
+    </div>
+    <nav>
+      <footer>
+        <a
+          tabindex="1"
+          href="mailto:chris.v.ozols@gmail.com"
+          id="email-button"
+          class="footer-icons"
+        >
+          <div class="popup nav-popup" id="email-button-popup">
+            <p>chris.v.ozols@gmail.com</p>
+          </div>
+        </a>
+        <a
+          tabindex="3"
+          href="http://www.linkedin.com/pub/chris-ozols/59/775/8a2"
+          class="footer-icons"
+          id="linkedin-button"
+        >
+          <div class="popup nav-popup" id="linkedin-button-popup">LinkedIn</div>
+        </a>
+        <a
+          tabindex="4"
+          href="https://github.com/cozuya"
+          class="footer-icons"
+          id="github-button"
+        >
+          <div class="popup nav-popup" id="github-button-popup">Github</div>
+        </a>
+      </footer>
+    </nav>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-1.10.2.min.js"
+    ></script>
+    <script type="text/javascript" src="scripts/textEffect.jquery.js"></script>
+    <!-- jQuery plugin I wrote -->
+    <script type="text/javascript" src="scripts/general.js"></script>
+  </body>
 </html>
