--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
   <head>
     <title>Chris Ozols - Minneapolis Minnesota software engineer</title>
     <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="Chris Ozols, a software engineer in the Minneapolis/St. Paul area"
-    />
+    <meta name="description" content="Chris Ozols, a software engineer in the Minneapolis/St. Paul area" />
     <meta name="author" content="Chris Ozols" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="author" href="humans.txt" />
     <link
       href="https://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans"
@@ -24,10 +18,7 @@
     <link rel="shortcut icon" href="images/favicon.png" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
     <link rel="stylesheet" type="text/css" href="styles/global.css" />
-    <script
-      type="text/javascript"
-      src="scripts/modernizr.custom.97547.js"
-    ></script>
+    <script type="text/javascript" src="scripts/modernizr.custom.97547.js"></script>
   </head>
   <body>
     <canvas id="header-canvas" width="100" height="7"></canvas>
@@ -36,36 +27,16 @@
     </header>
     <div id="main">
       <section id="whatido-container">
-        <img
-          src="images/cozpicsmall2.png"
-          alt="Chris Ozols"
-          title="Chris Ozols"
-        />
-        <h1>
-          I'm Chris, a web applications developer in Minneapolis Minnesota.
-        </h1>
-        <p>
-          <bold class="emph">I'm looking for a new role!</bold> I'm an
-          experienced frontend focused, full stack JavaScript developer. Feel
-          free to contact me below.
-        </p>
-        <p>
-          Check out my side project,
-          <a href="https://secrethitler.io">Secret Hitler IO</a>, a web
-          adaptation of the (creative commons non-commercial licensed) social
-          deduction indie board game.
-          <small
-            >I made the site mostly because of the game's permissive license, I
-            am not a terrible person, I promise.</small
-          >
-        </p>
+        <img src="images/cozpicsmall2.png" alt="Chris Ozols" title="Chris Ozols" />
+        <h1>I'm Chris, a web applications developer in Minneapolis Minnesota.</h1>
+        <p>Feel free to contact me below.</p>
       </section>
     </div>
     <nav>
       <footer>
         <a
           tabindex="1"
-          href="mailto:chris.v.ozols@gmail.com"
+          href="mailto:chris.v.ozols@gmail.com?subject=Contact&body=coz"
           id="email-button"
           class="footer-icons"
         >
@@ -78,25 +49,17 @@
           href="http://www.linkedin.com/pub/chris-ozols/59/775/8a2"
           class="footer-icons"
           id="linkedin-button"
+          aria-label="Send an email to Chris"
         >
           <div class="popup nav-popup" id="linkedin-button-popup">LinkedIn</div>
         </a>
-        <a
-          tabindex="3"
-          href="https://github.com/cozuya"
-          class="footer-icons"
-          id="github-button"
-        >
+        <a tabindex="3" href="https://github.com/cozuya" class="footer-icons" id="github-button">
           <div class="popup nav-popup" id="github-button-popup">Github</div>
         </a>
       </footer>
     </nav>
-    <script
-      type="text/javascript"
-      src="https://code.jquery.com/jquery-1.10.2.min.js"
-    ></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="scripts/textEffect.jquery.js"></script>
-    <!-- jQuery plugin I wrote -->
     <script type="text/javascript" src="scripts/general.js"></script>
   </body>
 </html>
